--- a/src/WebUI/Pages/Shared/_LoginPartial.cshtml
+++ b/src/WebUI/Pages/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MvDb.Infrastructure.Identity
+@using MvDb.Domain.Entities
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
