--- a/src/WebUI/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/WebUI/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,10 +5,12 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div class="row">
-    <div class="col-md-4">
-        <section>
+<div class="div-main">
+    <div class="div-secondary div-movies-background"></div>
+
+    <div class="div-secondary div-user-management">
+        <div class="div-form">
+            <h2>@ViewData["Title"]</h2>
             <form id="account" method="post">
                 <h4>Use a local account to log in.</h4>
                 <hr />
@@ -34,7 +36,7 @@
 
                 <br />
 
-                <div class="form-group">
+                <div class="div-button">
                     <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
 
@@ -42,33 +44,11 @@
 
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
                 </div>
             </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        @if ((Model.ExternalLogins?.Count ?? 0) != 0)
-        {
-            <section>
-                <h4>Use another service to log in.</h4>
-                <hr />
-                <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                    <div>
-                        <p>
-                            @foreach (var provider in Model.ExternalLogins)
-                            {
-                                <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                            }
-                        </p>
-                    </div>
-                </form>
-            </section>
-        }
+        </div>
     </div>
 </div>
 
