--- a/src/WebUI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/WebUI/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,15 +5,13 @@
 }
 
 <div class="div-main">
-    <div class="div-secondary div-movies-background">
+    <div class="div-secondary div-movies-background"></div>
 
-    </div>
     <div class ="div-secondary div-user-management">
         <div class="div-form">
             <h2>@ViewData["Title"]</h2>
-            <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                <h4>Create a new account.</h4>
-                <hr />
+
+            <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Input.Email"></label>
@@ -24,6 +22,11 @@
                     <label>Username</label>
                     <input asp-for="Input.UserName" class="form-control" />
                     <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label>Profile photo</label>
+                    <input asp-for="Input.ProfilePhoto" class="form-control" />
+                    <span asp-validation-for="Input.ProfilePhoto" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Input.Password"></label>
