--- a/src/WebUI/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/WebUI/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,14 +5,13 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="div-main">
+<div class="div-main div-movies-background-main">
     <div class="div-secondary div-movies-background"></div>
 
     <div class="div-secondary div-user-management">
         <div class="div-form">
             <h2>@ViewData["Title"]</h2>
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -44,7 +43,7 @@
 
                 <div class="form-group">
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a style="text-decoration: underline" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
                 </div>
             </form>
