--- a/src/WebUI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/WebUI/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Register";
 }
 
-<div class="div-main">
+<div class="div-main div-movies-background-main">
     <div class="div-secondary div-movies-background"></div>
 
     <div class ="div-secondary div-user-management">
@@ -19,12 +19,12 @@
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label>Username</label>
+                    <label asp-for="Input.UserName"></label>
                     <input asp-for="Input.UserName" class="form-control" />
                     <span asp-validation-for="Input.UserName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label>Profile photo</label>
+                    <label asp-for="Input.ProfilePhoto"></label>
                     <input asp-for="Input.ProfilePhoto" class="form-control" />
                     <span asp-validation-for="Input.ProfilePhoto" class="text-danger"></span>
                 </div>
@@ -51,7 +51,6 @@
     </div>
 </div>
 
-@*@section Scripts {
+@section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-*@
