--- a/src/WebUI/Pages/_Layout.cshtml
+++ b/src/WebUI/Pages/_Layout.cshtml
@@ -53,7 +53,7 @@
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity!.Name!</a>
+                                <a type="button" class="btn btn-outline-light" style="margin-top: 1px" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity!.Name</a>
                             </li>
                             <li class="nav-item">
                                 <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="/">
