--- a/src/WebUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/WebUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -6,12 +6,17 @@
 }
 
 <div class="div-manage-content">
-    @*<partial name="_StatusMessage" model="Model.StatusMessage" />*@
-
     <h4>@ViewData["Title"]</h4>
 
     <div class="div-main" style="flex-wrap: wrap">
-        <img src="@Model.CurrentUser.ProfilePhotoLink" class="profile-photo-big profile-photo-manage" />
+        @if (Model.CurrentUser.ProfilePhotoLink == null)
+        {
+            <img src="~/images/app/shared/no_profile_photo.png" class="profile-photo-big profile-photo-manage" />
+        }
+        else
+        {
+            <img src="@Model.CurrentUser.ProfilePhotoLink" class="profile-photo-big profile-photo-manage" />
+        }
 
         <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -34,11 +39,6 @@
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
-
-
-    @*<h4>Username: @Model.CurrentUser.UserName</h4>
-    <h4>Email: @Model.CurrentUser.Email</h4>
-    <img src="@Model.CurrentUser.ProfilePhotoLink" style="width: 100px"/>*@
 </div>
 
 @section Scripts {
