--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -4,7 +4,7 @@
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">
-        <img src="/images/app/logos/logo.png" alt="MvDb" class="main-logo"/>
+        <img src="/images/app/logos/logo.png" alt="MvDb" class="logo-main"/>
       </a>
       <button
         class="navbar-toggler"
