--- a/src/WebUI/Pages/_Layout.cshtml
+++ b/src/WebUI/Pages/_Layout.cshtml
@@ -12,6 +12,7 @@
     <title>@ViewData["Title"]</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="~/css/color-variables.css" rel="stylesheet">
     <link href="~/css/site.css" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +20,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm text-light navbar-user-management">
             <div class="container">
                 <a href="~/" class="navbar-brand">
-                    <img src="/images/app/logos/logo.png" alt="MvDb" style="width: 80px"/>
+                    <img src="/images/app/logos/logo.png" alt="MvDb" class="logo-main"/>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +32,7 @@
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
-                                <a type="button" class="btn btn-outline-light" style="margin: 1px 5px 0px 5px" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity!.Name</a>
+                                <a type="button" class="btn btn-outline-light nav-username" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity!.Name</a>
                             </li>
                             <li class="nav-item">
                                 <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="/">
