Applied minor modifications to EntityServices, created angular components for managing entities, managing medias and viewing the single media

--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom mb-3"
+    class="navbar navbar-expand-sm navbar-toggleable-sm text-light navbar-main"
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">
@@ -27,10 +27,16 @@
             [routerLinkActive]="['link-active']"
             [routerLinkActiveOptions]="{ exact: true }"
           >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+            <a class="nav-link text-light" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" href="/api" target="_blank">API</a>
+            <a class="nav-link text-light" href="/api" target="_blank">API</a>
+          </li>
+          <li class="nav-item"
+              [routerLinkActive]="['link-active']"
+              [routerLinkActiveOptions]="{ exact: true }"
+          >
+            <a class="nav-link text-light" [routerLink]="['/manage']">Manage</a>
           </li>
         </ul>
         <app-login-menu></app-login-menu>
