--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.scss
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.scss
@@ -14,10 +14,10 @@ html {
   }
 }
 
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
 .logo-main {
   width: 80px;
+}
+
+.navbar-main {
+  background-color: var(--navbar-dark);
 }
