--- a/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-medias.component.css
+++ b/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-medias.component.css
@@ -4,7 +4,7 @@ label {
 
 .media-container {
   width: 200px;
-  height: fit-content;
+  height: 390px;
   background-color: var(--grey-dark);
   transition-duration: 0.5s;
   margin: 0px 30px 30px 0px;
@@ -44,5 +44,5 @@ label {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin: 30px 0 50px 0;
+  margin: 50px 0;
 }
