Added update-media component, implemented search, sorting and pagination on manage-medias page, added directors and actors loading when viewing media

--- a/src/WebUI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/WebUI/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="div-main div-movies-background-main">
-    <div class="div-secondary div-movies-background"></div>
+    @*<div class="div-secondary"></div>*@
 
     <div class ="div-secondary div-user-management">
         <div class="div-form">
