--- a/src/WebUI/ClientApp/src/app/manage/manage-medias/create-media/create-media.component.html
+++ b/src/WebUI/ClientApp/src/app/manage/manage-medias/create-media/create-media.component.html
@@ -1,7 +1,5 @@
 <h1 class="mt-5 text-light">Create media</h1>
 
-<p class="text-light">{{createForm.value | json}}</p>
-
 <div class="div-main mt-5">
   <form [formGroup]="createForm" (ngSubmit)="onSubmit()" class="form-create" enctype="multipart/form-data">
     <h4>Create</h4>
@@ -16,23 +14,24 @@
           <label class="form-label text-dark" for="trailerLink">Trailer Link</label>
           <input class="form-control" type="text" id="trailerLink" formControlName="trailerLink" placeholder="Enter trailer link"/>
         </div>
-        <div>
+        <div *ngIf="currentMediaType === 'Movie'">
           <label class="form-label text-dark" for="duration">Duration</label>
           <input class="form-control" type="number" id="duration" formControlName="duration"/>
         </div>
-        <div>
+        <div *ngIf="currentMediaType === 'Movie'">
           <label class="form-label text-dark" for="releaseDate">Release Date</label>
           <input class="form-control" type="date" id="releaseDate" formControlName="releaseDate" />
         </div>
         <div>
           <label class="form-label text-dark" for="mediaType">Media Type</label>
-          <select class="form-select" id="mediaType" formControlName="mediaType">
+          <select class="form-select" id="mediaType" formControlName="mediaType" (change)="onMediaTypeChange()">
             <option *ngFor="let mediaType of mediaTypes">{{MediaType[mediaType]}}</option>
           </select>
         </div>
         <div>
           <label class="form-label text-dark" for="ageRating">Age Rating</label>
           <select class="form-select" id="ageRating" formControlName="ageRating">
+            <option value="">None</option>
             <option *ngFor="let ageRating of ageRatings">{{ageRating.name}}</option>
           </select>
         </div>
@@ -51,7 +50,6 @@
           <label class="form-label text-dark">Genres</label>
           <div class="div-main div-genre" *ngFor="let genre of createForm.get('genres')['controls']; let i = index" [formGroupName]="i">
             <select class="form-select" formControlName="name">
-              <!--        <input type="text" formControlName="genreName" placeholder="Genre" />-->
               <option *ngFor="let genre of genres">{{genre.name}}</option>
             </select>
             <button type="button" class="btn btn-warning btn-sm" (click)="genreUp(i)"><i class="bi bi-chevron-up"></i></button>
@@ -64,26 +62,6 @@
         </button>
       </div>
     </div>
-<!--    <label for="title" class="form-label text-dark">Title</label>-->
-<!--    <input type="text" class="form-control" id="title" placeholder="Enter title" formControlName="title">-->
-
-
-    <!-- Description -->
-
-    <!-- Media Type -->
-
-    <!-- Trailer Link -->
-
-    <!-- Age Rating -->
-
-    <!-- Duration -->
-
-    <!-- Release Date -->
-
-    <!-- Poster -->
-
-    <!-- Genres FormArray -->
-
 
     <div class="div-button">
       <button type="submit" class="btn btn-primary">Submit</button>
