--- a/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-media/manage-media.component.html
+++ b/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-media/manage-media.component.html
@@ -13,6 +13,9 @@
       <span *ngIf="media?.ageRating?.minAge < 13" class="badge rounded-pill text-light badge-success">{{media?.ageRating?.name}}</span>
       <span *ngIf="media?.ageRating?.minAge >= 13 && media?.ageRating?.minAge < 18" class="badge rounded-pill text-light badge-warning">{{media?.ageRating?.name}}</span>
       <span *ngIf="media?.ageRating?.minAge >= 18" class="badge rounded-pill text-light badge-danger">{{media?.ageRating?.name}}</span>
+      <div *ngIf="media.genres" class="div-genres">
+        <span *ngFor="let genre of media.genres" class="badge rounded-pill text-light badge-light">{{genre.name}}</span>
+      </div>
     </div>
     <div class="div-movie-info-description">
       <h5 class="text-light">{{media?.description}}</h5>
@@ -30,8 +33,8 @@
   <h2 class="text-light mt-5">Media</h2>
 
   <div class="div-main mt-3">
-    <button type="submit" class="btn btn-lg btn-warning">
-      <i class="bi bi-pencil"></i>&nbsp;&nbsp;Edit
+    <button routerLink="../update/{{media.id}}" type="submit" class="btn btn-lg btn-warning">
+      <i class="bi bi-pencil"></i>&nbsp;&nbsp;Update
     </button>
     <button type="submit" class="btn btn-lg btn-danger btn-delete">
       <i class="bi bi-trash"></i>&nbsp;&nbsp;Delete
@@ -41,10 +44,10 @@
   <h2 class="text-light mt-10">Directors</h2>
 
   <div class="div-main mt-3">
-    <a routerLink="" class="staff-container">
-      <img src="{{media.posterLink}}" alt="Photo" class="staff-photo">
+    <a *ngFor="let director of media.directors" routerLink="" class="staff-container">
+      <img src="{{director.photoLink}}" alt="Photo" class="staff-photo">
       <div class="div-staff-info">
-        <h5 class="text-light">Volodymyr Fedorenko</h5>
+        <h5 class="text-light">{{director.firstName}} {{director.lastName}}</h5>
       </div>
     </a>
   </div>
