--- a/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-media/manage-media.component.html
+++ b/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-media/manage-media.component.html
@@ -33,15 +33,21 @@
   <h2 class="text-light mt-5">Media</h2>
 
   <div class="div-main mt-3">
-    <button routerLink="../update/{{media.id}}" type="submit" class="btn btn-lg btn-warning">
+    <button routerLink="../update/{{media.id}}" class="btn btn-lg btn-warning">
       <i class="bi bi-pencil"></i>&nbsp;&nbsp;Update
     </button>
-    <button type="submit" class="btn btn-lg btn-danger btn-delete">
+    <button class="btn btn-lg btn-danger btn-delete">
       <i class="bi bi-trash"></i>&nbsp;&nbsp;Delete
     </button>
   </div>
 
   <h2 class="text-light mt-10">Directors</h2>
+
+  <div class="div-main mt-3">
+    <button routerLink="../update/directors/{{media.id}}" class="btn btn-lg btn-warning">
+      <i class="bi bi-pencil"></i>&nbsp;&nbsp;Update
+    </button>
+  </div>
 
   <div class="div-main mt-3">
     <a *ngFor="let director of media.directors" routerLink="" class="staff-container">
@@ -55,22 +61,16 @@
   <h2 class="text-light mt-10">Actors</h2>
 
   <div class="div-main mt-3">
-    <a routerLink="" class="staff-container">
-      <img src="{{media.posterLink}}" alt="Photo" class="staff-photo">
+    <button routerLink="../update/actors/{{media.id}}" class="btn btn-lg btn-warning">
+      <i class="bi bi-pencil"></i>&nbsp;&nbsp;Update
+    </button>
+  </div>
+
+  <div class="div-main mt-3">
+    <a *ngFor="let actor of media.actors" routerLink="" class="staff-container">
+      <img src="{{actor.photoLink}}" alt="Photo" class="staff-photo">
       <div class="div-staff-info">
-        <h5 class="text-light">Volodymyr Fedorenko</h5>
-      </div>
-    </a>
-    <a routerLink="" class="staff-container">
-      <img src="{{media.posterLink}}" alt="Photo" class="staff-photo">
-      <div class="div-staff-info">
-        <h5 class="text-light">Volodymyr Fedorenko</h5>
-      </div>
-    </a>
-    <a routerLink="" class="staff-container">
-      <img src="{{media.posterLink}}" alt="Photo" class="staff-photo">
-      <div class="div-staff-info">
-        <h5 class="text-light">Volodymyr Fedorenko</h5>
+        <h5 class="text-light">{{actor.firstName}} {{actor.lastName}}</h5>
       </div>
     </a>
   </div>
