--- a/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-medias.component.html
+++ b/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-medias.component.html
@@ -23,7 +23,10 @@
     </div>
 
     <div class="div-button">
-      <button type="submit" class="btn btn-primary">Search</button>
+      <button type="submit" class="btn btn-primary">
+        <i class="bi bi-search"></i>
+        &nbsp;Search
+      </button>
     </div>
   </form>
 
