--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -30,12 +30,12 @@
             <a class="nav-link text-light" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-light" [routerLink]="['/explore']">Explore</a>
+          </li>
+          <li class="nav-item" *ngIf="isAdministrator">
             <a class="nav-link text-light" href="/api" target="_blank">API</a>
           </li>
-          <li class="nav-item"
-              [routerLinkActive]="['link-active']"
-              [routerLinkActiveOptions]="{ exact: true }"
-          >
+          <li class="nav-item" *ngIf="isAdministrator">
             <a class="nav-link text-light" [routerLink]="['/manage']">Manage</a>
           </li>
         </ul>
