--- a/src/WebUI/ClientApp/src/app/explore/view-media/view-media.component.html
+++ b/src/WebUI/ClientApp/src/app/explore/view-media/view-media.component.html
@@ -11,9 +11,8 @@
       <h3 *ngIf="media?.rating !== 0" class="text-light"><i class="bi bi-star-fill rating-icon"></i>{{media.rating}}</h3>
       <h4 class="text-light">{{media?.releaseDate?.toDateString()}}</h4>
       <h5 class="text-light">{{duration}}</h5>
-      <span *ngIf="media?.ageRating?.minAge < 13" class="badge rounded-pill text-light badge-success">{{media?.ageRating?.name}}</span>
-      <span *ngIf="media?.ageRating?.minAge >= 13 && media?.ageRating?.minAge < 18" class="badge rounded-pill text-light badge-warning">{{media?.ageRating?.name}}</span>
-      <span *ngIf="media?.ageRating?.minAge >= 18" class="badge rounded-pill text-light badge-danger">{{media?.ageRating?.name}}</span>
+      <h5 *ngIf="media.mediaType === MediaType.Series" class="text-light">Episodes: {{episodeCount}}</h5>
+      <span class="badge rounded-pill text-light {{ageRatingBadge}}">{{media?.ageRating?.name}}</span>
       <div *ngIf="media.genres" class="div-genres">
         <span *ngFor="let genre of media.genres" class="badge rounded-pill text-light badge-light">{{genre.name}}</span>
       </div>
@@ -86,19 +85,20 @@
     <h2 class="text-light mt-10">Seasons</h2>
 
     <div class="div-main mt-3" *ngIf="isAdministrator">
-      <button routerLink="../../../manage/medias/update/actors/{{media.id}}" class="btn btn-lg btn-warning btn-margin">
+      <button routerLink="../../../manage/medias/reorder/seasons/{{media.id}}" class="btn btn-lg btn-warning btn-margin">
         <i class="bi bi-arrow-down-up"></i>&nbsp;&nbsp;Reorder
       </button>
-      <button routerLink="../../../manage/medias/update/actors/{{media.id}}" class="btn btn-lg btn-success">
+      <button routerLink="../../../manage/medias/create/season/{{media.id}}" class="btn btn-lg btn-success">
         <i class="bi bi-plus-circle"></i>&nbsp;&nbsp;Create
       </button>
     </div>
 
     <div class="div-main mt-3">
-      <a *ngFor="let actor of media.actors" routerLink="" class="staff-container">
-        <img src="{{actor.photoLink}}" alt="Photo" class="staff-photo">
+      <a *ngFor="let season of media.seasons" routerLink="../../seasons/{{season.id}}" class="staff-container">
+        <img src="{{season.posterLink}}" alt="Photo" class="staff-photo">
         <div class="div-staff-info">
-          <h5 class="text-light">{{actor.firstName}} {{actor.lastName}}</h5>
+          <h5 class="text-light">{{season.title}}</h5>
+          <h6 class="text-light">Episodes: {{season.episodeCount}}</h6>
         </div>
       </a>
     </div>
