--- a/src/WebUI/ClientApp/src/app/explore/view-season/view-season.component.css
+++ b/src/WebUI/ClientApp/src/app/explore/view-season/view-season.component.css
@@ -73,6 +73,18 @@ table {
   color: grey;
 }
 
+.manage-episodes {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.btn-manage-episode {
+  margin-left: 10px;
+}
+
 @media (max-width: 1100px) {
   .img-poster {
     width: 40%;
