--- a/src/WebUI/ClientApp/src/app/manage/manage-seasons/update-season/update-season.component.css
+++ b/src/WebUI/ClientApp/src/app/manage/manage-seasons/update-season/update-season.component.css
@@ -1,4 +1,4 @@
-.form-create {
+.form-update {
   width: 70%;
   background-color: white;
   border-radius: 10px;
@@ -35,9 +35,8 @@ label {
   padding: 0 0 0 8px;
 }
 
-.div-genre {
-  padding-top: 5px;
-  align-items: center;
+.form-check-label {
+  margin: 0 10px;
 }
 
 @media (max-width: 800px) {
@@ -45,7 +44,8 @@ label {
     width: 100%;
   }
 
-  .form-create {
+  .form-update {
     width: 100%;
   }
 }
+
