Implemented delete functionality for media, season, episode on frontend

--- a/src/WebUI/ClientApp/src/app/explore/view-media/view-media.component.html
+++ b/src/WebUI/ClientApp/src/app/explore/view-media/view-media.component.html
@@ -41,7 +41,7 @@
       <button routerLink="../../../manage/medias/update/{{media.id}}" class="btn btn-lg btn-warning btn-margin">
         <i class="bi bi-pencil"></i>&nbsp;&nbsp;Update
       </button>
-      <button class="btn btn-lg btn-danger">
+      <button routerLink="../../../manage/medias/delete/{{media.id}}" class="btn btn-lg btn-danger">
         <i class="bi bi-trash"></i>&nbsp;&nbsp;Delete
       </button>
     </div>
