--- a/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-medias.component.html
+++ b/src/WebUI/ClientApp/src/app/manage/manage-medias/manage-medias.component.html
@@ -30,7 +30,7 @@
     </div>
   </form>
 
-  <button routerLink="create-media" class="btn btn-lg btn-success btn-add">
+  <button routerLink="create" class="btn btn-lg btn-success btn-add">
     <i class="bi bi-plus-circle"></i>&nbsp;&nbsp;Create
   </button>
 </div>
